@@ -6,7 +6,7 @@
         <dimCoord id="73141289" points="[9]" shape="(1,)" standard_name="forecast_period" units="Unit('hours')" value_type="int32"/>
       </coord>
       <coord datadims="[0]">
-        <dimCoord id="22c278de" points="[0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0,
+        <dimCoord id="a42bcac2" points="[0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0,
 		9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0,
 		17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0,
 		25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0,
@@ -14,11 +14,11 @@
 		41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0,
 		49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0,
 		57.0, 58.0, 59.0]" shape="(60,)" standard_name="latitude" units="Unit('degrees')" value_type="float64">
-          <geogCS earth_radius="0.0"/>
+          <geogCS earth_radius="6371229.0"/>
         </dimCoord>
       </coord>
       <coord datadims="[1]">
-        <dimCoord id="a03d4e5f" points="[30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0,
+        <dimCoord id="63128986" points="[30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0,
 		38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0,
 		46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0,
 		54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0,
@@ -26,7 +26,7 @@
 		70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0,
 		78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0,
 		86.0, 87.0, 88.0, 89.0]" shape="(60,)" standard_name="longitude" units="Unit('degrees')" value_type="float64">
-          <geogCS earth_radius="0.0"/>
+          <geogCS earth_radius="6371229.0"/>
         </dimCoord>
       </coord>
       <coord>
